# josh_udcn_course3

./: .gitignore  README.md  docker-build-push.sh
deployment/: db-configmap.yaml  kafka.yaml  udaconnect-location-consumer.yaml  udaconnect-location-producer.yaml
docs/: architecture_decisions.md  grpc.md  openapi.yaml  postman.json
modules/api/: pyproject.toml
modules/api/app/udaconnect/: controllers.py  services.py
modules/locationConsumer/: Dockerfile  pyproject.toml  requirements.txt  server.py
modules/locationProducer/: Dockerfile  location.proto  location_pb2.py  location_pb2_grpc.py  pyproject.toml  requirements.txt  server.py  writer.py
