[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Josh Haines", email = "Josh@JoshHaines.com"},
]
dependencies = [
    "aniso8601==7.0.0",
    "attrs==19.1.0",
    "click==7.0",
    "flask==1.1.1",
    "flask-accepts==0.10.0",
    "flask-cors==3.0.8",
    "flask-restful==0.3.7",
    "flask-restplus==0.12.1",
    "flask-script==2.0.6",
    "flask-sqlalchemy==2.4.0",
    "geoalchemy2==0.8.4",
    "itsdangerous==1.1.0",
    "jinja2==2.11.2",
    "jsonschema==3.0.2",
    "markupsafe==1.1.1",
    "marshmallow==3.7.1",
    "marshmallow-sqlalchemy==0.23.1",
    "psycopg2-binary>=2.9.3",
    "pyrsistent==0.16.0",
    "python-dateutil==2.8.1",
    "pytz==2020.1",
    "six==1.15.0",
    "shapely>=1.8.0",
    "sqlalchemy==1.3.19",
    "werkzeug==0.16.1",
    "flask-restx==0.2.0",
    "python-dotenv>=0.19.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
